--- a/references.bib
+++ b/references.bib
@@ -204,14 +204,24 @@ title = {Apache Tez},
 howpublished = {\url {http://hortonworks.com/hadoop/tez/}}
 }
 
-@MISC{hawq,
-key = {hawq},
-title = "{Pivotal HAWQ}",
-howpublished = {\url {http://pivotalhd.docs.gopivotal.com/getting-started/hawq.html}}
-}
-author = {C. Mohan},
-title = "{Tutorial: An In-Depth Look at Modern Database Systems}",
-}
+@inproceedings{hawq,
+ author = {Chang, Lei and Wang, Zhanwei and Ma, Tao and Jian, Lirong and Ma, Lili and Goldshuv, Alon and Lonergan, Luke and Cohen, Jeffrey and Welton, Caleb and Sherry, Gavin and Bhandarkar, Milind},
+ title = {HAWQ: A Massively Parallel Processing SQL Engine in Hadoop},
+ booktitle = {Proceedings of the 2014 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '14},
+ year = {2014},
+ pages = {1223--1234},
+} 
+
+@inproceedings{split-execution,
+ author = {Bajda-Pawlikowski, Kamil and Abadi, Daniel J. and Silberschatz, Avi and Paulson, Erik},
+ title = {Efficient Processing of Data Warehousing Queries in a Split Execution Environment},
+ booktitle = {Proceedings of the 2011 ACM SIGMOD International Conference on Management of Data},
+ series = {SIGMOD '11},
+ year = {2011},
+ location = {Athens, Greece},
+ pages = {1165--1176},
+} 
 
 @article{pax,
 author = {Anastassia Ailamaki and DeWitt, David J. and Hill, Mark D.},
@@ -225,6 +235,16 @@ pages = {198-215},
 ee = {http://dx.doi.org/10.1007/s00778-002-0074-9},
 bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@inproceedings{invisible-loading,
+ author = {Abouzied, Azza and Abadi, Daniel J. and Silberschatz, Avi},
+ title = {Invisible Loading: Access-driven Data Transfer from Raw Files into Database Systems},
+ booktitle = {Proceedings of the 16th International Conference on Extending Database Technology},
+ series = {EDBT '13},
+ year = {2013},
+ location = {Genoa, Italy},
+ pages = {1--10},
+} 
 
 @inproceedings{sharksigmod13,
 author = {Xin, Reynold S. and Rosen, Josh and Zaharia, Matei and Franklin, Michael J. and Shenker, Scott and Stoica, Ion},
