--- a/references.bib
+++ b/references.bib
@@ -181,10 +181,17 @@ title = "Impala",
  title = {Apache Drill},
     howpublished  = {\url {http://www.mapr.com/resources/community-resources/apache-drill}}
 }
+
 @MISC{apacheSpark,
  key = {apacheSpark},
  title = {Apache Spark},
     howpublished  = {\url {https://spark.incubator.apache.org/}}
+}
+
+@MISC{hiveOnSpark,
+ key = {hiveOnSpark},
+ title = {Hive on Spark},
+    howpublished  = {\url {https://cwiki.apache.org/confluence/display/Hive/Hive+on+Spark}}
 }
 
 @MISC{trevni,
