Adding BigSQL, Impala, and refs

--- a/references.bib
+++ b/references.bib
@@ -232,10 +232,9 @@ title = "Impala",
 
 @inproceedings{sharksigmod13,
  author = {Xin, Reynold S. and Rosen, Josh and Zaharia, Matei and Franklin, Michael J. and Shenker, Scott and Stoica, Ion},
- title = {Shark: SQL and Rich Analytics at Scale},
+ title = {Shark: {SQL} and Rich Analytics at Scale},
  booktitle = {ACM SIGMOD},
  year = {2013},
- pages = {13--24}
 } 
 
 @inproceedings{mohan13,
@@ -285,8 +284,6 @@ title = "Impala",
   title     = "{Hive - A Petabyte Scale Data Warehouse Using Hadoop}",
   booktitle = {ICDE},
   year      = {2010},
-  pages     = {996-1005},
-  ee        = {http://doi.ieeecomputersociety.org/10.1109/ICDE.2010.5447738}
 }
 
 @article{googleDremel,
@@ -329,4 +326,37 @@ title = "Impala",
  publisher = {VLDB Endowment},
 } 
 
+@inproceedings{winmagic,
+  author    = {Calisto Zuzarte and
+               Hamid Pirahesh and
+               Wenbin Ma and
+               Qi Cheng and
+               Linqi Liu and
+               Kwai Wong},
+  title     = {{WinMagic} : Subquery Elimination Using Window Aggregation},
+  booktitle = {ACM SIGMOD},
+  year      = {2003},
+ }
+ 
+ @inproceedings{pirahesh96,
+  author    = {Praveen Seshadri and
+               Hamid Pirahesh and
+               T. Y. Cliff Leung},
+  title     = {Complex Query Decorrelation},
+  booktitle = {ICDE},
+  year      = {1996},
+}
 
+@misc{bigsql,
+author = {Scott Gray and  Fatma {\"O}zcan and Hebert Pereyra and Bert van der Linden and Adriana Zubiri},
+title= {{IBM Big SQL} 3.0: SQL-on-Hadoop without compromise},
+HOWPUBLISHED= {\url{http://public.dhe.ibm.com/common/ssi/ecm/en/sww14019usen/SWW14019USEN.PDF}}
+}
+
+
+@inproceedings{Kornacker+15,
+ author={Marcel Kornacker and Alexander Behm and Victor Bittorf and Taras Bobrovytsky and Casey Ching and Alan Choi and Justin Erickson and Martin Grund and Daniel Hecht and Matthew Jacobs and Ishaan Joshi and Lenni Kuff and Dileep Kumar and Alex Leblang and Nong Li and Ippokratis Pandis and Henry Robinson and David Rorke and Silvius Rus and John Russell and Dimitris Tsirogiannis and Skye Wanderman-Milne and Michael Yoder},
+ title={Impala: A Modern, Open-Source {SQL} Engine for {Hadoop}},
+ booktitle = {CIDR},
+ year = {2015},
+}
