--- a/paper.tex
+++ b/paper.tex
@@ -19,22 +19,22 @@
 
 \title{Tutorial: SQL-on-Hadoop Systems}
 
-\numberofauthors{3}
+\numberofauthors{4}
 
 % 1st author
 \author{
 \alignauthor
 Daniel Abadi\\
 \affaddr{Yale University}\\
-\email{daniel.abadi@yale.edu}
+\alignauthor
+Shivnath Babu\\
+\affaddr{Duke University}\\
 \alignauthor
 Fatma  {\"O}zcan\\
 \affaddr{IBM}\\
-\email{fozcan@us.ibm.com}
 \alignauthor
 Ippokratis Pandis\\
 \affaddr{Cloudera}\\
-\email{ippokratis@cloudera.com}
 }
 
 
