--- a/paper.tex
+++ b/paper.tex
@@ -12,58 +12,107 @@
 %\usetikzlibrary{arrows}
 \usepackage{balance}
 \usepackage{url}
+
+\newcounter{mycounter}
+
 \begin{document}
 \title{Tutorial: SQL-on-Hadoop Systems}
 
-\numberofauthors{4}
+\numberofauthors{1}
 
 % 1st author
 \author{
-\alignauthor
-Daniel Abadi\\
-\affaddr{Yale University}\\
-\email{daniel.abadi@yale.edu}
-\alignauthor 
-\newcommand{\spshiv }{\hspace{-12mm}}
-\spshiv Shivnath Babu\\
-\spshiv \affaddr{Duke University}
-\spshiv \email{shivnath@cs.duke.edu} 
-\alignauthor
-\newcommand{\spfatma}{\hspace{-15mm}}
-\spfatma Fatma {\"O}zcan\\
-\spfatma \affaddr{IBM Research}
-\spfatma \email{fozcan@us.ibm.com}
-\alignauthor
-\newcommand{\spippo}{\hspace{-12mm}}
-\spippo  Ippokratis Pandis\\
-\spippo \affaddr{Cloudera}
-\spippo \email{ippokratis@cloudera.com}
+$
+\begin{array}{cccc}
+  \mbox{\Large \sf Daniel Abadi} &
+  \mbox{\Large \sf Shivnath Babu} &
+  \mbox{\Large \sf Fatma {\"O}zcan} &
+  \mbox{\Large \sf Ippokratis Pandis}\\
+  \mbox{\affaddr{Yale University}} &
+  \mbox{\affaddr{Duke University}} &
+  \mbox{\affaddr{IBM Research}} &
+  \mbox{\affaddr{Cloudera}}\\
+  \mbox{{\large \sf daniel.abadi@yale.edu}} &
+  \mbox{{\large \sf shivnath@cs.duke.edu}} &
+  \mbox{{\large \sf fozcan@us.ibm.com}} &
+  \mbox{{\large \sf ippokratis@cloudera.com}}
+\end{array}
+$
+\\
 }
 \maketitle
+
+%% \affaddr{Yale University}\\
+%% \email{daniel.abadi@yale.edu}
+%% \alignauthor 
+%% \newcommand{\spshiv }{\hspace{-12mm}}
+%% \spshiv 
+%% \spshiv \affaddr{Duke University}
+%% \spshiv \email{shivnath@cs.duke.edu} 
+%% \alignauthor
+%% \newcommand{\spfatma}{\hspace{-15mm}}
+%% \spfatma 
+%% \spfatma \affaddr{IBM Research}
+%% \spfatma \email{fozcan@us.ibm.com}
+%% \alignauthor
+%% \newcommand{\spippo}{\hspace{-12mm}}
+%% \spippo  Ippokratis Pandis\\
+%% \spippo \affaddr{Cloudera}
+%% \spippo \email{ippokratis@cloudera.com}
+
+
 % ----------------
 % --- Abstract ---
 % ----------------
 %\begin{abstract}
 %\end{abstract}
+
 \section{Introduction}
-Enterprises are using Hadoop as a central data repository for all their data coming from various sources,  including operational systems, social media and the web, sensors and smart devices, as well as their applications. SQL processing over Hadoop data in particular gained significant traction over the couple of years, as many enterprise data management tools rely on SQL,
-and many enterprise users are familiar and comfortable with it. As a result, the number of SQL-on-Hadoop systems have increased significantly. 
+Enterprises are increasingly use Apache Hadoop, more specifically HDFS, as a central repository for all their data;
+data coming from various sources, including operational systems, social media and the web, sensors and smart devices, as well as their applications.
+At the same time many enterprise data management tools (e.g. from SAP ERP to Tableau) rely on SQL and many enterprise users are familiar and comfortable with it.
+As a result, SQL processing over Hadoop data has gained significant traction over the recent years, and the number of systems that provide such capability has increased significantly.
+There is a wide variety of solutions, system architectures and capabilities in this space.
+This tutorial tries to shed a light on this matter.
 
-%Over the last decade, the database field has witnessed significant major innovations and changes in enterprise data platforms. First came the wave of noSQL, which provide high scale-out systems, although at the expense of strong ACID transactions and declarative SQL processing. On the analytics side, Hadoop emerged as the platform for all analytics needs of the enterprise. Although Hadoop started with just MapReduce and HDFS, it evolved into a multi-framework system, which supports not only MapReduce but also Spark, Tez, SQL, and others. The driver that enables all these frameworks to work in a single cluster environment is the shared file system, Hadoop File System (HDFS).Given the popularity of SQL in the enterprise, it was soon evident that SQL processing over HDFS data is critical in this new emerging enterprise data platform.
+%Over the last decade, the database field has witnessed significant major innovations and changes in enterprise data platforms. First came the wave of noSQL, which provide high scale-out systems, although at the expense of strong ACID transactions and declarative SQL processing. On the analytics side, Hadoop emerged as the platform for all analytics needs of the enterprise. Although Hadoop started with just MapReduce and HDFS, it evolved into a multi-framework system, which supports not only MapReduce but also Spark, Tez, SQL, and others. The driver that enables all these frameworks to work in a single cluster environment is the shared file system, Hadoop File System (HDFS). Given the popularity of SQL in the enterprise, it was soon evident that SQL processing over HDFS data is critical in this new emerging enterprise data platform.
 
-In this tutorial, we use the term SQL-on-Hadoop to refer to systems that provide some level of declarative SQL(-like) processing over HDFS and noSQL data sources, using architectures that include computational or storage engines compatible with Apache Hadoop. We classify SQL-on-Hadoop systems into five categories:
+In this tutorial, we use the term SQL-on-Hadoop to refer to systems that provide some level of declarative SQL(-like) processing over HDFS and noSQL data sources, using architectures that include computational or storage engines compatible with Apache Hadoop. We study the architecture of several SQL-on-Hadoop systems and classify them into five categories:
 
-\begin{itemize}
-\item {{\bf Native systems with big data run-times:} These are systems that utilize a big data run-time such as Tez, or Spark to execute SQL queries. This category includes systems such as Hive and Spark SQL.}
-\item{ {\bf Native systems with MPP architectures:} These are systems that employ an MPP database architecture that use stand-alone long running processing to execute SQL queries over HDFS data. This category includes systems such as Impala, Presto, Drill, and Big SQL}
+\vspace{-2mm}
+\setcounter{mycounter}{0}
+\begin{list}{\arabic{mycounter}.}{\usecounter{mycounter}\leftmargin=1.4em}
+  \itemsep=0.5em
+  \parsep=0.5em
+  \parskip=0em
+\item {{\bf Native systems with Big Data run-times:} These are systems that utilize a big data run-time such as Tez, or Spark to execute SQL queries. This category includes systems such as Hive and Spark SQL.}
+\item{ {\bf Native systems with MPP architectures:} These are systems that employ an MPP database architecture that uses stand-alone long-running processing to execute SQL queries over HDFS data. This category includes systems such as Impala, Presto, Drill, and Big SQL}
 \item{{\bf Database hybrids:} These are systems that combine a relational SQL engine with Hadoop run-time. This category includes systems such as Hadapt, HAWQ, and Vortex.}
-\item{ {\bf Database connectors:} This category includes the extensions provided by major database vendors to reach out to Hadoop and ingest HDFS data. }
+\item{ {\bf Database connectors:} This category includes the extensions provided by major database vendors to reach out to Hadoop and ingest HDFS data.}
 \item{ {\bf noSQL/Hbase specific variants:} These are systems that provide a declarative SQL layer on top of noSQL systems, HBase in particular. The systems in this category are Phoenix, and Splice Machine. Note that these systems focus on OLTP-like workloads, whereas all other categories address OLAP-like analytics}
-\end{itemize}
+\end{list}
 
-An important aspect of SQL-on-Hadoop, which is orthogonal to all these categories, is the various HDFS file formats used to store the data. While text is an important format for in-situ SQL analysis, and ELT processing, various columnar formats have been proposed to provide fast analytics query processing. In this tutorial, we will first introduce these file formats, then we will discuss the characteristics, the pros and cons of each category in detail. In particular, we will examine their architectural differences, and cover in-depth their approach to indexing, updates, query optimization, as well as new algorithms they introduce in a 3-hour tutorial.
+An important aspect of SQL-on-Hadoop, which is orthogonal to all these categories, is the various file formats used to store the data. While text is an important format for in-situ SQL analysis, and ELT processing, various columnar formats, such as sequence, Avro, ORC, and Parquet, have been proposed to provide fast analytics query processing. 
 
-\section{HDFS File Formats}
+In this tutorial, we will first introduce these file formats, then we will discuss the characteristics, the pros and cons of each category in detail. In particular, we will examine their architectural differences, and cover in-depth their approach to indexing, updates, query optimization, as well as new algorithms they introduce in a 3-hour tutorial.
+
+\section{File Formats}
+
+Even though the driver that enables all the system presented in this tutorial to work in a single cluster environment is the shared file system, Hadoop File System (HDFS), there is actually a variety of file format that are being used to store data. 
+
+\noindent{\bf Text}. By far the most popular file format is of course plain text.
+
+\vspace{2mm}
+\noindent{\bf Avro}.
+
+\vspace{2mm}
+\noindent{\bf RC}.
+
+\vspace{2mm}
+\noindent{\bf ORC and DRWF}.
+
+\vspace{2mm}
+\noindent{\bf Parquet}.
 
 \section{Category 1: Native systems with big data run-times}
 
