--- a/references.bib
+++ b/references.bib
@@ -356,9 +356,9 @@ year = {2015},
 }
 
 @inproceedings{sparkSQL,
- author = {Michael Amburst and others},
- title = {Spark SQL: Relational Data Processing in Spark},
- booktitle = {SIGMOD},
+ author = {Michael Amburst and Reynold S. Xin and Cheng Lian and Yin Huai and Davies Liu and Joseph K. Bradley and Xiangrui Meng and Tomer Kaftan and Michael J. Franklin and Ali Ghodsi and Matei Zaharia},
+ title = {Spark {SQL}: Relational Data Processing in {Spark}},
+ booktitle = {ACM SIGMOD},
  year = 2015,
 }
 
@@ -393,9 +393,21 @@ howpublished = {\url {http://phoenix.apache.org/}}
  howpublished = {\url {http://www.splicemachine.com/}},
 }
 
+ @Comment booktitle = {Proceedings of the 2011 ACM SIGMOD International Conference on Management of Data},
+ @Comment series = {SIGMOD '11},
+ @Comment year = {2011},
+ @Comment isbn = {978-1-4503-0661-4},
+ @Comment location = {Athens, Greece},
+ @Comment pages = {1161--1164},
+ @Comment numpages = {4},
+ @Comment url = {http://doi.acm.org/10.1145/1989323.1989446},
+ @Comment doi = {10.1145/1989323.1989446},
+ @Comment acmid = {1989446},
+ @Comment publisher = {ACM},
+ @Comment address = {New York, NY, USA},
 @inproceedings{ibm-sigmod2011,
- author = {Fatma {\"O}zcan and others},
- title = {Emerging trends in the enterprise data analytics: connecting Hadoop and DB2 warehouse},
- booktitle = {SIGMOD},
- year = 2011,
-}
+ author = {\"{O}zcan, Fatma and Hoa, David and Beyer, Kevin S. and Balmin, Andrey and Liu, Chuan Jie and Li, Yu},
+ title = {Emerging Trends in the Enterprise Data Analytics: Connecting {Hadoop and DB2} Warehouse},
+ booktitle = {ACM SIGMOD},
+ year = {2011},
+} 
