Intro and structure

--- a/references.bib
+++ b/references.bib
@@ -204,6 +204,13 @@ title = {Apache Tez},
 howpublished = {\url {http://hortonworks.com/hadoop/tez/}}
 }
 
+@inproceedings{tezsigmod15,
+ author = {Bikas Saha and Hitesh Shah and Siddharth Seth and Gopal Vijayaraghavan and Arun Murthy and Carlo Curino},
+ title = {Apache {Tez}: A Unifying Framework for Modeling and Building Data Processing Applications},
+ booktitle = {ACM SIGMOD},
+  year = {2015},
+}
+
 @inproceedings{hawq,
  author = {Chang, Lei and Wang, Zhanwei and Ma, Tao and Jian, Lirong and Ma, Lili and Goldshuv, Alon and Lonergan, Luke and Cohen, Jeffrey and Welton, Caleb and Sherry, Gavin and Bhandarkar, Milind},
  title = {HAWQ: A Massively Parallel Processing SQL Engine in Hadoop},
@@ -373,6 +380,23 @@ author={Marcel Kornacker and Alexander Behm and Victor Bittorf and Taras Bobrovy
 title={Impala: A Modern, Open-Source {SQL} Engine for {Hadoop}},
 booktitle = {CIDR},
 year = {2015},
+}
+
+ @Comment booktitle = {Proceedings of the 2Nd USENIX Conference on Hot Topics in Cloud Computing},
+ @Comment series = {HotCloud'10},
+ @Comment year = {2010},
+ @Comment location = {Boston, MA},
+ @Comment pages = {10--10},
+ @Comment numpages = {1},
+ @Comment url = {http://dl.acm.org/citation.cfm?id=1863103.1863113},
+ @Comment acmid = {1863113},
+ @Comment publisher = {USENIX Association},
+ @Comment address = {Berkeley, CA, USA},
+@inproceedings{sparkhotcloud10,
+ author = {Zaharia, Matei and Chowdhury, Mosharaf and Franklin, Michael J. and Shenker, Scott and Stoica, Ion},
+ title = {Spark: Cluster Computing with Working Sets},
+ booktitle = {HotCloud},
+ year = {2010},
 }
 
 @inproceedings{sparkSQL,
