--- a/paper.tex
+++ b/paper.tex
@@ -70,14 +70,17 @@ $
 \section{Introduction}
 Enterprises are increasingly using Apache Hadoop, more specifically HDFS, as a central repository for all their data;
 data coming from various sources, including operational systems, social media and the web, sensors and smart devices, as well as their applications.
-At the same time many enterprise data management tools (e.g. from SAP ERP to Tableau) rely on SQL and many enterprise users are familiar and comfortable with it.
+At the same time many enterprise data management tools (e.g. from SAP ERP and SAS to Tableau) rely on SQL and many enterprise users are familiar and comfortable with it.
 As a result, SQL processing over Hadoop data has gained significant traction over the recent years, and the number of systems that provide such capability has increased significantly.
-There is a wide variety of solutions, system architectures and capabilities in this space.
-This tutorial tries to shed a light on this matter.
+There is a wide variety of solutions, system architectures and capabilities in this space with each solution vendor claiming superiority of their solution.
 
-%Over the last decade, the database field has witnessed significant major innovations and changes in enterprise data platforms. First came the wave of noSQL, which provide high scale-out systems, although at the expense of strong ACID transactions and declarative SQL processing. On the analytics side, Hadoop emerged as the platform for all analytics needs of the enterprise. Although Hadoop started with just MapReduce and HDFS, it evolved into a multi-framework system, which supports not only MapReduce but also Spark, Tez, SQL, and others. The driver that enables all these frameworks to work in a single cluster environment is the shared file system, Hadoop File System (HDFS). Given the popularity of SQL in the enterprise, it was soon evident that SQL processing over HDFS data is critical in this new emerging enterprise data platform.
+In this tutorial we use the term SQL-on-Hadoop to refer to systems that provide some level of declarative SQL(-like) processing over HDFS and noSQL data sources, using architectures that include computational or storage engines compatible with Apache Hadoop. The purpose of this tutorial is to provide an overview of the SQL-on-Hadoop options and to try to categorize and compare those options.
 
-In this tutorial, we use the term SQL-on-Hadoop to refer to systems that provide some level of declarative SQL(-like) processing over HDFS and noSQL data sources, using architectures that include computational or storage engines compatible with Apache Hadoop. We study the architecture of several SQL-on-Hadoop systems and classify them into five categories:
+\subsection{File formats}
+Before starting presenting the various SQL-on-Hadoop architectures and systems, an important aspect of SQL-on-Hadoop, which is orthogonal to all these architecture, is the various file formats used to store the data. While text is an important format for in-situ SQL analysis, and ELT processing, various columnar formats have been proposed to provide fast analytics query processing. We present many of the available options and argue about their strengths.
+
+\subsection{Categories}
+For the main part of this tutorial, we study the architecture of several SQL-on-Hadoop systems and classify them into five categories:
 
 \vspace{-2mm}
 \setcounter{mycounter}{0}
@@ -85,16 +88,20 @@ In this tutorial, we use the term SQL-on-Hadoop to refer to systems that provide
   \itemsep=0.5em
   \parsep=0.5em
   \parskip=0em
-\item {{\bf Native systems with Big Data run-times:} These are systems that utilize a big data run-time such as Tez, or Spark to execute SQL queries. This category includes systems such as Hive and Spark SQL.}
-\item{ {\bf Native systems with MPP architectures:} These are systems that employ an MPP database architecture that uses stand-alone long-running processing to execute SQL queries over HDFS data. This category includes systems such as Impala, Presto, Drill, and Big SQL}
+\item {{\bf Native systems with Big Data run-times:} These are systems that utilize a big data run-time such as Tez \cite{tezsigmod15}, or Spark \cite{sparkhotcloud10} to execute SQL queries. This category includes systems such as Hive \cite{hive} and Spark SQL \cite{sparkSQL}.}
+\item{ {\bf Native systems with MPP architectures:} These are systems that employ an MPP database architecture that uses stand-alone long-running processing to execute SQL queries over HDFS data. This category includes systems such as Impala \cite{Kornacker+15}, Presto, Drill \cite{drill}, and Big SQL \cite{bigsql}}
 \item{{\bf Database hybrids:} These are systems that combine a relational SQL engine with Hadoop run-time. This category includes systems such as Hadapt, HAWQ, and Vortex.}
 \item{ {\bf Database connectors:} This category includes the extensions provided by major database vendors to reach out to Hadoop and ingest HDFS data.}
 \item{ {\bf noSQL/Hbase specific variants:} These are systems that provide a declarative SQL layer on top of noSQL systems, HBase in particular. The systems in this category are Phoenix, and Splice Machine. Note that these systems focus on OLTP-like workloads, whereas all other categories address OLAP-like analytics}
 \end{list}
 
-An important aspect of SQL-on-Hadoop, which is orthogonal to all these categories, is the various file formats used to store the data. While text is an important format for in-situ SQL analysis, and ELT processing, various columnar formats, such as sequence, Avro, ORC, and Parquet, have been proposed to provide fast analytics query processing. 
+\section{Tutorial structure}
 
-In this tutorial, we will first introduce these file formats, then we will discuss the characteristics, the pros and cons of each category in detail. In particular, we will examine their architectural differences, and cover in-depth their approach to indexing, updates, query optimization, as well as new algorithms they introduce in a 3-hour tutorial.
+In this 3-hour tutorial, we will first present at a high-level the different architectures and categories for SQL-on-Hadoop processing and we argue about the pros and cons of each option.
+Next, we present the file formats that are prevalent in storing data in Hadoop. We present each option and a comparison between them in terms of usability, data size (compression) and speed of processing. Then we move to the main part of this tutorial where we present each individual category in detail. In particular, for each category we discuss its characteristics, the pros and cons and present in more detail one or two representative systems.
+We focus on the architectural differences, and cover in-depth their approach to indexing, updates, query optimization, as well as new algorithms they introduce.
+After presenting each category and in the last part of the tutorial we discuss again and debate 
+about architecture. That should be the engaging enough for the audience and act as a bridge to start a lively open discussion.  
 
 \section{File Formats}
 
